Service-kubernet/dns-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dns-pod
  namespace: dns-service
spec:
  containers:
    - name: busybox
      image: radial/busyboxplus:curl
      command:
        - sleep
        - '3600'
