Service-kubernet/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  - name: test-pod
    image: radial/busyboxplus:curl
    command:
     - sleep
     - '3600'
