Service-kubernet/cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
   name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
