Service-kubernet/magicalnginx-service.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: magical-nginx
spec:
 type: NodePort
 ports:
  - protocol: TCP
    port: 80
    nodePort: 31304
    name: http 
 selector:
  app: magical-nginx
