Service-kubernet/nginx-official-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-official-service
spec:
  type: NodePort
  selector:
    app: nginx-official-service
  ports:
  - port: 80
    protocol: TCP
    nodePort: 31303
